src/objects/cb5__CBModelingRule__c.object
<CustomObject>
    <description>Rule for converting one data type to another</description>
    <fields>
        <fullName>cb5__CBModelingRuleGroup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Modeling Rule Group</label>
        <referenceTo>cb5__CBModelingRuleGroup__c</referenceTo>
        <relationshipLabel>CB Modeling Rules</relationshipLabel>
        <relationshipName>CBModelingRules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__ComplexFilterCondition__c</fullName>
        <label>Complex Filter Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__KeyFields__c</fullName>
        <label>KeyFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__Mode__c</fullName>
        <label>Mode</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                    <default>true</default>
                    <label>General</label>
                </value>
                <value>
                    <fullName>Deleting</fullName>
                </value>
                <value>
                    <fullName>Replacing</fullName>
                </value>
                <value>
                    <fullName>Zeroing Amounts</fullName>
                </value>
                <value>
                    <fullName>Mass Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cb5__MultilevelResult__c</fullName>
        <formula>cb5__ResultRecordChildType__c != null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MultilevelResult</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__MultilevelSource__c</fullName>
        <formula>cb5__SourceRecordChildType__c != null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Multilevel Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cb5__Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cb5__PeriodShift__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period Shift</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cb5__ResultChildFilter__c</fullName>
        <label>Result Child Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__ResultParentFilter__c</fullName>
        <label>Result Parent Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__ResultRecordChildType__c</fullName>
        <label>Result Record Child Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__ResultRecordParentType__c</fullName>
        <label>Result Record Parent Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__SourceChildFilter__c</fullName>
        <label>Source Child Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__SourceParentFilter__c</fullName>
        <label>Source Parent Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__SourceRecordChildType__c</fullName>
        <label>Source Record Child Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__SourceRecordParentType__c</fullName>
        <description>The name of the source sObject type</description>
        <label>Source Record Parent Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__StoreDrillDown__c</fullName>
        <formula>cb5__CBModelingRuleGroup__r.cb5__StoreDrillDown__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Drill Down</label>
        <type>Checkbox</type>
    </fields>
    <label>CB Modeling Rule</label>
    <nameField>
        <label>CB Modeling Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Modeling Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>